crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@parenthesized-binder-negative.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/parenthesized-binder-negative.input
---
Input: (-1)
Start { kind: ParenthesizedBinder }
  Token { kind: LeftParenthesis }
  Start { kind: NegativeBinder }
    Token { kind: Minus }
    Start { kind: LiteralBinder }
      Token { kind: LiteralInteger }
    Finish
  Finish
  Token { kind: RightParenthesis }
Finish

