crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@tail-record.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/tail-record.input
---
Input: { | r }

Start { kind: RecordType }
  Start { kind: Wrapped }
    Token { kind: LeftCurly }
    Start { kind: RowInner }
      Start { kind: RowTail }
        Token { kind: Pipe }
        Start { kind: VariableType }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
    Token { kind: RightCurly }
  Finish
Finish

